# binary-manager

./: .gitignore  Cargo.toml  README.md  ]
src/: main.rs
src/disasm/: mod.rs
src/elf64/: mod.rs
src/elf64/loaders/: load_elf64_header.rs  load_elf64_program_header.rs  load_elf64_section_header.rs  mod.rs
src/elf64/printers/: mod.rs
src/elf64/types/: mod.rs
src/elf64/types/elf64_header/: e_ehsize.rs  e_ehsize.rs.bak  e_entry.rs  e_entry.rs.bak  e_flags.rs  e_flags.rs.bak  e_ident.rs  e_ident.rs.bak  e_machine.rs  e_machine.rs.bak  e_phentsize.rs  e_phentsize.rs.bak  e_phnum.rs  e_phnum.rs.bak  e_phoff.rs  e_phoff.rs.bak  e_shentsize.rs  e_shentsize.rs.bak  e_shnum.rs  e_shnum.rs.bak  e_shoff.rs  e_shoff.rs.bak  e_shstrndx.rs  e_shstrndx.rs.bak  e_type.rs  e_type.rs.bak  e_version.rs  e_version.rs.bak  mod.rs
src/elf64/types/elf64_program_header/: mod.rs  p_align.rs  p_filesz.rs  p_flags.rs  p_memsz.rs  p_offset.rs  p_paddr.rs  p_type.rs  p_vaddr.rs
src/elf64/types/elf64_section_header/: mod.rs  sh_addr.rs  sh_addralign.rs  sh_entsize.rs  sh_flags.rs  sh_info.rs  sh_link.rs  sh_name.rs  sh_offset.rs  sh_size.rs  sh_type.rs
src/traits/: binary.rs  binary_printer.rs  binary_trait.rs  header_field.rs  mod.rs
src/utils/: binary_type.rs  bytes_to_hex.rs  endian.rs  mod.rs  parse_hex.rs  string_until_null.rs
