[package]
name = "binary-manager"
authors = ["Matheus-git <mathiew0@gmail.com>"]
description = "A binary parser"
version = "0.1.0"
license = "MIT"
edition = "2024"
exclude = [
    "assets/*",
]

[dependencies]
plain = "0.2.3"
tabled = "0.20.0"
clap = { version = "4.3", features = ["derive"] }
capstone = "0.13.0"
