[package]
name = "binkit"
authors = ["Matheus-git <mathiew0@gmail.com>"]
description = "A modular toolbox for analyzing, disassembling, and patching binary formats"
version = "0.1.0"
license = "MIT"
edition = "2024"
exclude = [
    "assets/*",
]

[dependencies]
plain = "0.2.3"
tabled = "0.20.0"
clap = { version = "4.3", features = ["derive"] }
capstone = "0.13.0"

[profile.release]
opt-level = "z"
lto = true
